<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/coverImage_imageView_profile"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:contentDescription="TODO" android:scaleType="centerCrop"
            android:src="@drawable/nav_menu_header_bg"
            app:srcCompat="@drawable/nav_menu_header_bg" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/image_circleImageView_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/coverImage_imageView_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/man"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="3dp" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@+id/coverImage_imageView_profile"
            android:background="#ebca0707"
            android:elevation="4dp"
            android:paddingBottom="24dp">


            <ImageView
                android:id="@+id/editImage_imageView_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:contentDescription="TODO" android:focusable="true"
                android:onClick="editImage"
                android:src="@android:drawable/ic_menu_edit"
                tools:ignore="OnClick" />

            <TextView
                android:id="@+id/userName_textView_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/fullName_profile"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location_textView_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/status_textView_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/location_textView_profile"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/status_textView_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userName_textView_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/nackname_textView_profile"
                android:textColor="#fff"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="6dp">

                <TextView
                    android:id="@+id/following_textView_avtivityPro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="Following \n0"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/followers_textView_avtivityPro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Followers \n0"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/loading_progressBar_actPro"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="194dp"
                android:layout_height="149dp"
                android:layout_centerInParent="true"
                android:theme="@style/AppTheme.WhiteAccent"
                android:visibility="gone" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageViewProfile_actPro"
            android:layout_width="358dp"
            android:layout_height="387dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:importantForAutofill="auto"
            android:background="@color/white"
            app:srcCompat="@color/common_google_signin_btn_text_dark_focused"
            android:visibility="gone"
            android:contentDescription="TODO" android:elevation="8dp"/>

    </RelativeLayout>


</ScrollView>